Trip Updated Italy page.

--- a/trip/italy/rome.htm
+++ b/trip/italy/rome.htm
@@ -61,7 +61,7 @@
 飛機的部份，司徒跟肥豬媽並沒有選擇直飛米蘭，而是選擇比較便宜的轉機方式，從<b>台北松山 &gt; 日本羽田 &gt; 德國法蘭克福 &gt; 義大利羅馬</b>，羽田機場到法蘭克福機場約需要12小時的航行時間，由於司徒在飛機上起身走動的次數比較少，最後導致屁股超痛，似乎是邁入更年期的症狀？而海關的檢查點是在法蘭克福機場，所以到達羅馬機場後，就可以直接出關，司徒跟肥豬媽是在羅馬機場購買express車票到羅馬中央車站(Roma Termini)<br>
 <img src="rome/3.jpg" class="maxSize"><br><br>
 
-由於司徒跟肥豬媽住的飯店就在中央車站附近，因此，check-in後就開始羅馬的行程，而隨處可見的古蹟是羅馬的一大特色，更讓司徒驚訝的是，很多馬路並沒有紅綠燈，但是，車子會優先禮讓行人通行<br>
+由於司徒跟肥豬媽住的飯店就在中央車站附近，因此，check-in後就開始羅馬的行程，隨處可見的古蹟是羅馬的一大特色，很多馬路並沒有紅綠燈設置，不過，車子都會優先禮讓行人通行<br>
 <img src="rome/4.jpg" class="maxSize"><br><br>
 
 人民廣場(Piazza del Popolo)<br>
@@ -78,10 +78,102 @@
 <img src="rome/11.jpg" class="maxSize"><br>
 <img src="rome/12.jpg" class="maxSize"><br><br>
 
-西班牙廣場(Piazza di Spagna)，有蠻多警察在巡邏，看到就讓人比較心安，雖然網路說義大利扒手很多，不過，在此次義大利旅行中，很幸運地，並沒有遇到東西被偷，不過，當有人靠近時，司徒跟肥豬媽都會特別注意一下背包<br>
+西班牙廣場(Piazza di Spagna)，有蠻多警察在巡邏，看到就讓人比較心安，雖然網路說義大利扒手很多，不過，在此次義大利旅行中，很幸運地，並沒有遇到東西被偷，不過，當有人靠近時，司徒跟肥豬媽還是會特別注意一下背包<br>
 <img src="rome/13.jpg" class="maxSize"><br>
 <img src="rome/14.jpg" class="maxSize"><br><br>
 
+梵諦岡博物館(Musei Vaticani)<br>
+<img src="rome/15.jpg" class="maxSize"><br>
+<img src="rome/16.jpg" class="maxSize"><br>
+<img src="rome/17.jpg" class="maxSize"><br>
+<img src="rome/18.jpg" class="maxSize"><br>
+<img src="rome/19.jpg" class="maxSize"><br><br>
+
+聽肥豬媽說這些雕像以前都是有雞雞的，只是被某一代國王下令要替換成葉子，說這樣比較美觀，一看到雞雞被斷成這樣，應該很痛...<br>
+<img src="rome/20.jpg" class="maxSize"><br><br>
+
+雞雞還是比葉子霸氣多了～<br>
+<img src="rome/21.jpg" class="maxSize"><br>
+<img src="rome/22.jpg" class="maxSize"><br><br>
+
+聽說左手臂是被大師接過的<br>
+<img src="rome/23.jpg" class="maxSize"><br>
+<img src="rome/24.jpg" class="maxSize"><br><br>
+
+美好的早晨<br>
+<img src="rome/25.jpg" class="maxSize"><br>
+<img src="rome/26.jpg" class="maxSize"><br><br>
+
+司徒發現天花板幾乎都是美術館最精華的地方<br>
+<img src="rome/27.jpg" class="maxSize"><br>
+<img src="rome/28.jpg" class="maxSize"><br><br>
+
+肥豬媽說是澡盆<br>
+<img src="rome/29.jpg" class="maxSize"><br>
+<img src="rome/30.jpg" class="maxSize"><br>
+<img src="rome/31.jpg" class="maxSize"><br>
+<img src="rome/32.jpg" class="maxSize"><br>
+<img src="rome/33.jpg" class="maxSize"><br>
+<img src="rome/34.jpg" class="maxSize"><br>
+<img src="rome/35.jpg" class="maxSize"><br>
+<img src="rome/36.jpg" class="maxSize"><br><br>
+
+這可是天花板～<br>
+<img src="rome/37.jpg" class="maxSize"><br>
+<img src="rome/38.jpg" class="maxSize"><br><br>
+
+作者是右下角第二位<br>
+<img src="rome/39.jpg" class="maxSize"><br>
+<img src="rome/40.jpg" class="maxSize"><br>
+<img src="rome/41.jpg" class="maxSize"><br><br>
+
+上樓、下樓的人是互相看不到對方的～<br>
+<img src="rome/42.jpg" class="maxSize"><br><br>
+
+聖伯多祿大殿(Basilica di San Pietro)<br>
+<img src="rome/45.jpg" class="maxSize"><br>
+<img src="rome/46.jpg" class="maxSize"><br><br>
+
+視覺震撼的圓頂(Dome)，相當厲害的建築工法～<br>
+<img src="rome/47.jpg" class="maxSize"><br>
+<img src="rome/48.jpg" class="maxSize"><br>
+<img src="rome/49.jpg" class="maxSize"><br>
+<img src="rome/50.jpg" class="maxSize"><br>
+<img src="rome/51.jpg" class="maxSize"><br>
+<img src="rome/52.jpg" class="maxSize"><br><br>
+
+相當厲害的雕刻作品，尤其是皺摺的部份～<br>
+<img src="rome/53.jpg" class="maxSize"><br>
+<img src="rome/54.jpg" class="maxSize"><br>
+<img src="rome/55.jpg" class="maxSize"><br>
+<img src="rome/56.jpg" class="maxSize"><br><br>
+
+司徒都說了，不用買有電梯的票，不過，既然都買了，那就坐電梯上去吧～<br>
+<img src="rome/43.jpg" class="maxSize"><br>
+<img src="rome/44.jpg" class="maxSize"><br><br>
+
+最上層的圓頂有鐵絲網圍住～<br>
+<img src="rome/57.jpg" class="maxSize"><br><br>
+
+漂亮的美景～<br>
+<img src="rome/58.jpg" class="maxSize"><br>
+<img src="rome/59.jpg" class="maxSize"><br>
+<img src="rome/60.jpg" class="maxSize"><br>
+<img src="rome/61.jpg" class="maxSize"><br>
+<img src="rome/62.jpg" class="maxSize"><br><br>
+
+走出來就可以看到漂亮的橋墩～<br>
+<img src="rome/63.jpg" class="maxSize"><br><br>
+
+聽說這兩尊才是原作品<br>
+<img src="rome/64.jpg" class="maxSize"><br>
+<img src="rome/65.jpg" class="maxSize"><br><br>
+
+羅馬的巷子還是蠻漂亮的～<br>
+<img src="rome/66.jpg" class="maxSize"><br><br>
+
+羅馬的馬路旁都是種植橘子樹...<br>
+<img src="rome/67.jpg" class="maxSize"><br>
 </p>
 
 <p>
