--- a/trip/italy/rome.htm
+++ b/trip/italy/rome.htm
@@ -158,7 +158,9 @@
 漂亮的美景～<br>
 <img src="rome/58.jpg" class="maxSize"><br>
 <img src="rome/59.jpg" class="maxSize"><br>
-<img src="rome/60.jpg" class="maxSize"><br>
+<img src="rome/60.jpg" class="maxSize"><br><br>
+
+聖伯多祿廣場(Piazza San Pietro)<br>
 <img src="rome/61.jpg" class="maxSize"><br>
 <img src="rome/62.jpg" class="maxSize"><br><br>
 
