Trip Updated Italy page.

--- a/trip/italy/rome.htm
+++ b/trip/italy/rome.htm
@@ -164,12 +164,14 @@
 <img src="rome/61.jpg" class="maxSize"><br>
 <img src="rome/62.jpg" class="maxSize"><br><br>
 
-走出來就可以看到漂亮的橋墩～<br>
-<img src="rome/63.jpg" class="maxSize"><br><br>
-
-聽說這兩尊才是原作品<br>
+聖天使橋(Ponte Sant'Angelo)<br>
+<img src="rome/63.jpg" class="maxSize"><br>
+<img src="rome/68.jpg" class="maxSize"><br>
 <img src="rome/64.jpg" class="maxSize"><br>
-<img src="rome/65.jpg" class="maxSize"><br><br>
+<img src="rome/65.jpg" class="maxSize"><br>
+<img src="rome/69.jpg" class="maxSize"><br>
+<img src="rome/70.jpg" class="maxSize"><br>
+<img src="rome/71.jpg" class="maxSize"><br><br>
 
 羅馬的巷子還是蠻漂亮的～<br>
 <img src="rome/66.jpg" class="maxSize"><br><br>
