Trip Updated Italy page.

--- a/trip/italy/rome.htm
+++ b/trip/italy/rome.htm
@@ -177,7 +177,26 @@
 <img src="rome/66.jpg" class="maxSize"><br><br>
 
 羅馬的馬路旁都是種植橘子樹...<br>
-<img src="rome/67.jpg" class="maxSize"><br>
+<img src="rome/67.jpg" class="maxSize"><br><br>
+
+納沃納廣場(Piazza Navona)<br>
+<img src="rome/72.jpg" class="maxSize"><br>
+<img src="rome/73.jpg" class="maxSize"><br>
+<img src="rome/74.jpg" class="maxSize"><br>
+<img src="rome/75.jpg" class="maxSize"><br>
+<img src="rome/76.jpg" class="maxSize"><br>
+<img src="rome/77.jpg" class="maxSize"><br><br>
+
+在羅馬會經常看到的<b>轉角遇到愛</b>，不過，晚上轉身找路時容易嚇一跳...<br>
+<img src="rome/78.jpg" class="maxSize"><br><br>
+
+萬神殿(Pantheon)，需要預約才能進去看...<br>
+<img src="rome/79.jpg" class="maxSize"><br>
+<img src="rome/80.jpg" class="maxSize"><br><br>
+
+哈德良神廟(Il Tempio di Adriano)<br>
+<img src="rome/81.jpg" class="maxSize"><br>
+<img src="rome/82.jpg" class="maxSize"><br><br>
 </p>
 
 <p>
