Trip Updated Italy page.

--- a/trip/italy/rome.htm
+++ b/trip/italy/rome.htm
@@ -190,7 +190,7 @@
 在羅馬會經常看到的<b>轉角遇到愛</b>，不過，晚上轉身找路時容易嚇一跳...<br>
 <img src="rome/78.jpg" class="maxSize"><br><br>
 
-萬神殿(Pantheon)，需要預約才能進去看...<br>
+萬神殿(Pantheon)<br>
 <img src="rome/79.jpg" class="maxSize"><br>
 <img src="rome/80.jpg" class="maxSize"><br><br>
 
