Trip Updated Italy page.

--- a/trip/italy/rome.htm
+++ b/trip/italy/rome.htm
@@ -197,6 +197,90 @@
 哈德良神廟(Il Tempio di Adriano)<br>
 <img src="rome/81.jpg" class="maxSize"><br>
 <img src="rome/82.jpg" class="maxSize"><br><br>
+
+特雷維噴泉(Fontana di Trevi)<br>
+<img src="rome/83.jpg" class="maxSize"><br>
+<img src="rome/84.jpg" class="maxSize"><br>
+<img src="rome/85.jpg" class="maxSize"><br>
+<img src="rome/86.jpg" class="maxSize"><br><br>
+
+沿路經過的漂亮景點<br>
+<img src="rome/87.jpg" class="maxSize"><br>
+<img src="rome/88.jpg" class="maxSize"><br>
+<img src="rome/89.jpg" class="maxSize"><br>
+<img src="rome/90.jpg" class="maxSize"><br>
+<img src="rome/91.jpg" class="maxSize"><br><br>
+
+真理之口(La Bocca della Verita)<br>
+<img src="rome/92.jpg" class="maxSize"><br><br>
+
+河邊的小島<br>
+<img src="rome/93.jpg" class="maxSize"><br>
+<img src="rome/94.jpg" class="maxSize"><br>
+<img src="rome/95.jpg" class="maxSize"><br><br>
+
+羅馬競技場(Piazza del Colosseo)<br>
+<img src="rome/96.jpg" class="maxSize"><br>
+<img src="rome/97.jpg" class="maxSize"><br>
+<img src="rome/98.jpg" class="maxSize"><br><br>
+
+參加解說團的其中一個集合地點<br>
+<img src="rome/99.jpg" class="maxSize"><br><br>
+
+額外參加地下行程<br>
+<img src="rome/100.jpg" class="maxSize"><br>
+<img src="rome/101.jpg" class="maxSize"><br><br>
+
+聽說以前還可以放水，讓兩艘船在上面廝殺<br>
+<img src="rome/102.jpg" class="maxSize"><br><br>
+
+VIP座位上有刻名字<br>
+<img src="rome/103.jpg" class="maxSize"><br><br>
+
+窮人只能坐高樓層<br>
+<img src="rome/104.jpg" class="maxSize"><br>
+<img src="rome/105.jpg" class="maxSize"><br>
+<img src="rome/106.jpg" class="maxSize"><br><br>
+
+沿路經過的一個景點<br>
+<img src="rome/107.jpg" class="maxSize"><br>
+<img src="rome/108.jpg" class="maxSize"><br><br>
+
+勝利聖母教堂(Chiesa di Santa Maria della Vittoria)，貝尼尼相當厲害的一個作品，肥豬媽說這個作品是天使調戲女生，女生在高潮當下的樣子<br>
+<img src="rome/109.jpg" class="maxSize"><br><br>
+
+博爾蓋塞美術館(Museo e Galleria Borghese)<br>
+<img src="rome/110.jpg" class="maxSize"><br>
+<img src="rome/111.jpg" class="maxSize"><br>
+<img src="rome/112.jpg" class="maxSize"><br>
+<img src="rome/113.jpg" class="maxSize"><br><br>
+
+每天都有限量的票，場次還有限制人數，第二次前來才終於買到票<br>
+<img src="rome/114.jpg" class="maxSize"><br>
+<img src="rome/115.jpg" class="maxSize"><br>
+<img src="rome/116.jpg" class="maxSize"><br><br>
+
+漂亮的天花板<br>
+<img src="rome/117.jpg" class="maxSize"><br>
+<img src="rome/118.jpg" class="maxSize"><br><br>
+
+貝尼尼超強的作品，可以把捏肉的狀態，用雕刻作品詮釋出來<br>
+<img src="rome/119.jpg" class="maxSize"><br>
+<img src="rome/120.jpg" class="maxSize"><br><br>
+
+這肌肉線條雕刻的相當逼真<br>
+<img src="rome/121.jpg" class="maxSize"><br>
+<img src="rome/122.jpg" class="maxSize"><br>
+<img src="rome/123.jpg" class="maxSize"><br><br>
+
+漂亮的天花板<br>
+<img src="rome/124.jpg" class="maxSize"><br>
+<img src="rome/125.jpg" class="maxSize"><br>
+<img src="rome/126.jpg" class="maxSize"><br>
+<img src="rome/127.jpg" class="maxSize"><br><br>
+
+漂亮的羅馬～<br>
+<img src="rome/128.jpg" class="maxSize">
 </p>
 
 <p>
