Wine Refined code.

--- a/program/wine/cpp_dlg_mouse.htm
+++ b/program/wine/cpp_dlg_mouse.htm
@@ -91,6 +91,9 @@ LRESULT CALLBACK WndProc(HWND hWnd, UINT uMsg, WPARAM wParam, LPARAM lParam)
         InvalidateRect(hWnd, NULL, true);
         break;
     case WM_CLOSE:
+        DestroyWindow(hWnd);
+        return 0;
+    case WM_DESTROY:
         PostQuitMessage(0);
         return 0;
     case WM_PAINT:
