--- a/program/wine/cpp_dlg_event.htm
+++ b/program/wine/cpp_dlg_event.htm
@@ -78,6 +78,9 @@ LRESULT CALLBACK WndProc(HWND hWnd, UINT uMsg, WPARAM wParam, LPARAM lParam)
 {
     switch (uMsg) {
     case WM_CLOSE:
+        DestroyWindow(hWnd);
+        return 0;
+    case WM_DESTROY:
         PostQuitMessage(0);
         return 0;
     }
