--- a/program/wine/cpp_dlg_timer.htm
+++ b/program/wine/cpp_dlg_timer.htm
@@ -86,6 +86,9 @@ LRESULT CALLBACK WndProc(HWND hWnd, UINT uMsg, WPARAM wParam, LPARAM lParam)
         InvalidateRect(hWnd, NULL, true);
         break;
     case WM_CLOSE:
+        DestroyWindow(hWnd);
+        return 0;
+    case WM_DESTROY:
         KillTimer(hWnd, 1);
         PostQuitMessage(0);
         return 0;
