Wine Refined code.

--- a/program.htm
+++ b/program.htm
@@ -480,6 +480,14 @@ Wine</h3>
         <a href="program/wine/cpp_dlg_icon.htm">
         Icon</a><br>
 
+        &emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/wine/cpp_dlg_menu.htm">
+        Menu (Resource)</a><br>
+
+        &emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/wine/cpp_dlg_menu_create.htm">
+        Menu (CreateMenu)</a><br>
+
       &emsp;&emsp;&oplus;
       Single Document Interface (SDI)<br>
 
