--- a/program/wine/arm64_hello.htm
+++ b/program/wine/arm64_hello.htm
@@ -65,21 +65,26 @@ main.s
 <pre class="brush:asm">
     .global WinMain
     .extern MessageBoxA
-
+    .extern ExitProcess
+ 
     .data
 title: .asciz "main"
 content: .asciz "Hello, world!"
-
+ 
     .text
 WinMain:
     stp x29, x30, [sp, #-0x10]!
-
+ 
     mov x0, 0
     ldr x1, =content
     ldr x2, =title
     mov x3, 0
     bl MessageBoxA
 
+    mov x0, 0
+    bl ExitProcess
+ 
+    mov x0, 0
     ldp x29, x30, [sp], #0x10
     ret
 </pre><br>
