--- a/program/wine/cpp_dlg_dialogbox.htm
+++ b/program/wine/cpp_dlg_dialogbox.htm
@@ -90,6 +90,7 @@ int WINAPI WinMain(HINSTANCE hInstance, HINSTANCE hPrevInstance,
                    LPSTR lpCmdLine, int nCmdShow)
 {
     DialogBox(hInstance, MAKEINTRESOURCE(IDD_MAIN), NULL, DlgProc);
+    ExitProcess(0);
     return 0;
 }
 </pre><br>
