--- a/program/wine/cpp_dlg_timer.htm
+++ b/program/wine/cpp_dlg_timer.htm
@@ -125,6 +125,7 @@ int WINAPI WinMain(HINSTANCE hInstance, HINSTANCE hPrevInstance,
     while (GetMessage(&amp;msg, NULL, 0, 0)) {
         DispatchMessage(&amp;msg);
     }
+    ExitProcess(0);
     return 0;
 }
 </pre><br>
