--- a/program/wine/cpp_dlg_version.htm
+++ b/program/wine/cpp_dlg_version.htm
@@ -94,6 +94,7 @@ int WINAPI WinMain(HINSTANCE hInstance, HINSTANCE hPrevInstance,
 
     MessageBox(NULL, vName, "main", MB_OK);
     free(vData);
+    ExitProcess(0);
     return 0;
 }
 </pre><br>
