--- a/program/wine/cpp_hello.htm
+++ b/program/wine/cpp_hello.htm
@@ -57,6 +57,7 @@
 <table>
 <tr><th>API</th></tr>
 <tr><td>int MessageBox(HWND hWnd, LPCTSTR lpText, LPCTSTR lpCaption, UINT uType);</td></tr>
+<tr><td>VOID ExitProcess(UINT uExitCode);</td></tr>
 </table><br>
 
 <p>
@@ -69,6 +70,7 @@ int WINAPI WinMain(HINSTANCE hInstance, HINSTANCE hPrevInstance,
                    LPSTR lpCmdLine, int nCmdShow)
 {
     MessageBox(NULL, "Hello, world!", "main", MB_OK);
+    ExitProcess(0);
     return 0;
 }
 </pre><br>
