--- a/program/wine/cpp_dlg_menu_create.htm
+++ b/program/wine/cpp_dlg_menu_create.htm
@@ -45,7 +45,7 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>Wine &gt;&gt; C/C++ &gt;&gt; Dialog</h3>
-<p><b>Chord</b></p>
+<p><b>Menu (CreateMenu)</b></p>
 <hr size="1">
 <p>
 參考資訊：<br>
@@ -54,14 +54,12 @@
 3. <a href="http://www.winprog.org/tutorial/">tutorial</a><br>
 4. <a href="https://github.com/gammasoft71/Examples_Win32">examples_win32</a><br><br>
 
-Chord使用方式如下：<br>
-<img src="cpp_dlg_chord/2.jpg" class="maxSize"><br><br>
-
 說明：
 </p>
 <table>
 <tr><th>API</th></tr>
-<tr><td>BOOL Chord(HDC hdc, int nLeftRect, int nTopRect, int nRightRect, int nBottomRect, int nXRadial1, int nYRadial1, int nXRadial2, int nYRadial2);</td></tr>
+<tr><td>HMENU CreateMenu(VOID)</td></tr>
+<tr><td>BOOL AppendMenu(HMENU hMenu, UINT uFlags, UINT uIDNewItem, LPCTSTR lpNewItem);</td></tr>
 </table><br>
 
 <p>
@@ -69,6 +67,8 @@ main.c
 </p>
 <pre class="brush:cpp">
 #include &lt;windows.h&gt;
+
+#define IDM_EXIT 101
 
 HWND hWin = NULL;
 WNDPROC defWndProc = NULL;
@@ -82,18 +82,13 @@ LRESULT CALLBACK WndProc(HWND hWnd, UINT uMsg, WPARAM wParam, LPARAM lParam)
     case WM_DESTROY:
         PostQuitMessage(0);
         return 0;
-    case WM_PAINT:
-        PAINTSTRUCT ps = {0};
-        HDC hdc = BeginPaint(hWnd, &amp;ps);
-        HPEN pen = CreatePen(PS_SOLID, 3, RGB(0xff, 0x00, 0x00));
-        HBRUSH brush = CreateSolidBrush(RGB(0x00, 0xff, 0x00));
-        SelectObject(hdc, pen);
-        SelectObject(hdc, brush);
-        Chord(hdc, 10, 10, 200, 200, 0, 0, 200, 100);
-        EndPaint(hWnd, &amp;ps);
-        DeleteObject(pen);
-        DeleteObject(brush);
-        break;
+    case WM_COMMAND:
+        switch (LOWORD(wParam)) {
+        case IDM_EXIT:
+            DestroyWindow(hWnd);
+            return 0;
+        }
+        return 0;
     }
     return CallWindowProc(defWndProc, hWnd, uMsg, wParam, lParam);
 }
@@ -105,6 +100,12 @@ int WINAPI WinMain(HINSTANCE hInstance, HINSTANCE hPrevInstance,
                         NULL, NULL, NULL, NULL);
     defWndProc =
         (WNDPROC)SetWindowLongPtr(hWin, GWLP_WNDPROC, (long int)WndProc);
+
+    HMENU hMenu = CreateMenu();
+    HMENU hSubMenu = CreateMenu();
+    AppendMenu(hSubMenu, MF_STRING, IDM_EXIT, "Exit");
+    AppendMenu(hMenu, MF_POPUP, (UINT_PTR)hSubMenu, "File");
+    SetMenu(hWin, hMenu);
     ShowWindow(hWin, SW_SHOW);
 
     MSG msg = {0};
@@ -115,15 +116,16 @@ int WINAPI WinMain(HINSTANCE hInstance, HINSTANCE hPrevInstance,
     return 0;
 }
 </pre><br>
+
 <p>
 編譯、執行
 </p>
 <pre>
-$ winegcc main.c -o main -lgdi32
+$ winegcc main.c -o main
 $ wine ./main.exe
 </pre>
 <p>
-<img style="border:0px" src="cpp_dlg_chord/1.jpg" class="maxSize">
+<img style="border:0px" src="cpp_dlg_menu/1.jpg" class="maxSize">
 </p>
 
 <p>
