Wine How to modify system menu.

--- a/program.htm
+++ b/program.htm
@@ -488,12 +488,20 @@ Wine</h3>
         <a href="program/wine/cpp_dlg_menu_create.htm">
         Menu (CreateMenu)</a><br>
 
+        &emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/wine/cpp_dlg_sysmenu.htm">
+        Menu (System Menu)</a><br>
+
       &emsp;&emsp;&oplus;
       Single Document Interface (SDI)<br>
 
         &emsp;&emsp;&emsp;&emsp;&lowast;
         <a href="program/wine/cpp_sdi_event.htm">
         Event</a><br>
+    
+&lowast;
+<a href="program/wine/systemmenu.htm">
+如何顯示System Menu</a><br>  
 <br><br><br><br>
   
 <div id="fasm"></div>
