Wine Refined code.

--- a/program/wine/cpp_dlg_menu.htm
+++ b/program/wine/cpp_dlg_menu.htm
@@ -44,8 +44,8 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>Wine &gt;&gt; C/C++ &gt;&gt; Dialog</h3>
-<p><b>Menu (Resource)</b></p>
+<h3>Wine &gt;&gt; C/C++ &gt;&gt; Dialog &gt;&gt; Menu</h3>
+<p><b>Resource</b></p>
 <hr size="1">
 <p>
 參考資訊：<br>
