--- a/program/wine/cpp_dlg_arc.htm
+++ b/program/wine/cpp_dlg_arc.htm
@@ -44,7 +44,7 @@
 <div id="content">
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
-<h3>Wine &gt;&gt; C/C++ &gt;&gt; Dialog</h3>
+<h3>Wine &gt;&gt; C/C++ &gt;&gt; Dialog &gt;&gt; Painting</h3>
 <p><b>Arc</b></p>
 <hr size="1">
 <p>
