--- a/program.htm
+++ b/program.htm
@@ -498,6 +498,10 @@ Wine</h3>
           <a href="program/wine/cpp_dlg_sysmenu.htm">
           System Menu</a><br>
 
+          &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+          <a href="program/wine/cpp_dlg_trackmenu.htm">
+          TrackPopupMenu</a><br>
+
       &emsp;&emsp;&oplus;
       Single Document Interface (SDI)<br>
 
