Wine Refined code.

--- a/program/wine/cpp_dlg_trackmenu.htm
+++ b/program/wine/cpp_dlg_trackmenu.htm
@@ -85,10 +85,11 @@ LRESULT CALLBACK WndProc(HWND hWnd, UINT uMsg, WPARAM wParam, LPARAM lParam)
         PostQuitMessage(0);
         return 0;
     case WM_RBUTTONDOWN:
-        hMenu = CreateMenu();
-        AppendMenu(hMenu, MF_STRING, IDM_EXIT, "Exit");
         GetCursorPos(&amp;stPos);
+        hMenu = CreatePopupMenu();
+        AppendMenu(hMenu, MF_STRING, IDM_EXIT, "Exit");
         TrackPopupMenu(hMenu, TPM_LEFTALIGN, stPos.x, stPos.y, 0, hWnd, NULL);
+        DestroyMenu(hMenu);
         return 0;
     case WM_COMMAND:
         switch (LOWORD(wParam)) {
