--- a/program.htm
+++ b/program.htm
@@ -502,6 +502,10 @@ Wine</h3>
           <a href="program/wine/cpp_dlg_trackmenu.htm">
           TrackPopupMenu</a><br>
 
+        &emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/wine/cpp_dlg_stringtable.htm">
+        StringTable</a><br>
+
       &emsp;&emsp;&oplus;
       Single Document Interface (SDI)<br>
 
