--- a/program/wine/cpp_dlg_sysmenu.htm
+++ b/program/wine/cpp_dlg_sysmenu.htm
@@ -85,7 +85,7 @@ LRESULT CALLBACK WndProc(HWND hWnd, UINT uMsg, WPARAM wParam, LPARAM lParam)
         switch (LOWORD(wParam)) {
         case IDM_EXIT:
             DestroyWindow(hWnd);
-            return 0;
+            break;
         }
         return 0;
     }
