--- a/program.htm
+++ b/program.htm
@@ -506,6 +506,10 @@ Wine</h3>
         <a href="program/wine/cpp_dlg_stringtable.htm">
         StringTable</a><br>
 
+        &emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/wine/cpp_dlg_accelerator.htm">
+        Accelerator</a><br>
+
       &emsp;&emsp;&oplus;
       Single Document Interface (SDI)<br>
 
