--- a/program/wine/cpp_dlg_menu.htm
+++ b/program/wine/cpp_dlg_menu.htm
@@ -84,7 +84,7 @@ LRESULT CALLBACK WndProc(HWND hWnd, UINT uMsg, WPARAM wParam, LPARAM lParam)
         switch (LOWORD(wParam)) {
         case IDM_EXIT:
             DestroyWindow(hWnd);
-            return 0;
+            break;
         }
         break;
     }
