Wine How to use RCDATA in resource file.

--- a/program.htm
+++ b/program.htm
@@ -510,6 +510,10 @@ Wine</h3>
         <a href="program/wine/cpp_dlg_accelerator.htm">
         Accelerator</a><br>
 
+        &emsp;&emsp;&emsp;&emsp;&lowast;
+        <a href="program/wine/cpp_dlg_rcdata.htm">
+        RCDATA</a><br>
+
       &emsp;&emsp;&oplus;
       Single Document Interface (SDI)<br>
 
