GNU Updated title.

--- a/program.htm
+++ b/program.htm
@@ -173,7 +173,7 @@ GNU</h3>
 
   &emsp;&emsp;&lowast;
   <a href="program/gnu/cpp_setcap_clone.htm">
-  set capability in container</a><br>
+  set capability (container)</a><br>
 
   &emsp;&emsp;&lowast;
   <a href="program/gnu/cpp_rawfb.htm">
