--- a/program/gnu/cpp_setcap_clone.htm
+++ b/program/gnu/cpp_setcap_clone.htm
@@ -45,7 +45,7 @@
 <script type="text/javascript" src="../../header.js"></script>
 <div id="page">
 <h3>GNU &gt;&gt; C/C++</h3>
-<p><b>set capability in container</b></p>
+<p><b>set capability (container)</b></p>
 <hr size="1">
 <p>
 參考資訊：<br>
