GNU Refined code.

--- a/program/gnu/cpp_setcap_clone.htm
+++ b/program/gnu/cpp_setcap_clone.htm
@@ -100,6 +100,7 @@ int main(int argc, char **argv)
 編譯、執行
 </p>
 <pre>
+$ sudo apt-get install libcap2-dev libcap-dev -y
 $ gcc main.c -o test -lcap -static
 $ ./test
 </pre><br>
