--- a/program/gnu/cpp_setcap.htm
+++ b/program/gnu/cpp_setcap.htm
@@ -78,7 +78,7 @@ int main(int argc, char **argv)
 編譯、執行
 </p>
 <pre>
-$ sudo apt-get install libcap2-dev -y
+$ sudo apt-get install libcap2-dev libcap-dev -y
 $ gcc main.c -o test -lcap
 $ ./test
 </pre><br>
