--- a/trip/italy/firenze.htm
+++ b/trip/italy/firenze.htm
@@ -51,6 +51,51 @@
 <p>
 行程表(<b>熱門的門票記得先從網路購買</b>)：<br>
 <img src="firenze/1.jpg" class="maxSize"><br><br>
+
+佛羅倫斯是一個相當漂亮的地方，建議可以停留久一點，體驗一下悠閒的生活，交通管制也做的相當好，大巴士不會進入市區，所以走在路上不會感覺很擁擠，不過可能是淡季的關係，發現很多建築物都有維修用的鷹架，稍微破壞了一些美感，而佛羅倫斯的美術館相當多且很值得進去參觀，對於司徒來說，這是唯一可以免費上廁所的好地方～<br><br>
+
+美第奇小聖堂(Cappelle Medicee)<br>
+<img src="firenze/21.jpg" class="maxSize"><br>
+<img src="firenze/23.jpg" class="maxSize"><br><br>
+
+相當壯觀的圓頂<br>
+<img src="firenze/24.jpg" class="maxSize"><br>
+<img src="firenze/25.jpg" class="maxSize"><br>
+<img src="firenze/26.jpg" class="maxSize"><br><br>
+
+佛羅倫斯市徽<br>
+<img src="firenze/27.jpg" class="maxSize"><br><br>
+
+美第奇的家族徽章<br>
+<img src="firenze/28.jpg" class="maxSize"><br>
+<img src="firenze/29.jpg" class="maxSize"><br>
+<img src="firenze/30.jpg" class="maxSize"><br>
+<img src="firenze/22.jpg" class="maxSize"><br><br>
+
+聖母百花聖殿(Cattedrale di Santa Maria del Fiore)，相當漂亮的教堂<br>
+<img src="firenze/2.jpg" class="maxSize"><br>
+<img src="firenze/3.jpg" class="maxSize"><br>
+<img src="firenze/4.jpg" class="maxSize"><br>
+<img src="firenze/5.jpg" class="maxSize"><br>
+<img src="firenze/6.jpg" class="maxSize"><br><br>
+
+新聖母大殿(Basilica di Santa Maria Novella)<br>
+<img src="firenze/7.jpg" class="maxSize"><br><br>
+
+SMN百年修道院，裡面有賣東西，肥豬媽買了一些香皂，說要放在衣櫥...<br>
+<img src="firenze/8.jpg" class="maxSize"><br>
+<img src="firenze/9.jpg" class="maxSize"><br>
+<img src="firenze/10.jpg" class="maxSize"><br>
+<img src="firenze/11.jpg" class="maxSize"><br>
+<img src="firenze/12.jpg" class="maxSize"><br>
+<img src="firenze/13.jpg" class="maxSize"><br>
+<img src="firenze/14.jpg" class="maxSize"><br>
+<img src="firenze/15.jpg" class="maxSize"><br>
+<img src="firenze/16.jpg" class="maxSize"><br>
+<img src="firenze/17.jpg" class="maxSize"><br>
+<img src="firenze/18.jpg" class="maxSize"><br>
+<img src="firenze/19.jpg" class="maxSize"><br>
+<img src="firenze/20.jpg" class="maxSize"><br><br>
 </p>
 
 <p>
