Wine How to use bitblt.

--- a/program.htm
+++ b/program.htm
@@ -467,6 +467,10 @@ Wine</h3>
           <a href="program/wine/cpp_dlg_text.htm">
           Text</a><br>
             
+          &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+          <a href="program/wine/cpp_dlg_bitblt.htm">
+          BitBlt</a><br>
+            
         &emsp;&emsp;&emsp;&emsp;&oplus;
         Menu<br>
 
