Wine How to use stretchblt.

--- a/program.htm
+++ b/program.htm
@@ -471,6 +471,10 @@ Wine</h3>
           <a href="program/wine/cpp_dlg_bitblt.htm">
           BitBlt</a><br>
             
+          &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+          <a href="program/wine/cpp_dlg_stretchblt.htm">
+          StretchBlt</a><br>
+            
         &emsp;&emsp;&emsp;&emsp;&oplus;
         Menu<br>
 
