PinePhone Added review page.

--- a/phone.htm
+++ b/phone.htm
@@ -87,6 +87,7 @@
   <a href="#pro1"><img src="img/photos/pro1.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="F(x)tec Pro1"/></a>
   <a href="#titan"><img src="img/photos/titan.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Unihertz Titan"/></a>
   <a href="#pixel3axl"><img src="img/photos/pixel3axl.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Google Pixel 3a XL"/></a>
+  <a href="#pinephone"><img src="img/photos/pinephone.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="PINE64 PinePhone"/></a>
 </p>
 </div>
 
@@ -2269,8 +2270,16 @@ Partition Table</a><br>
   
   &emsp;&emsp;&lowast;
   <a href="phone/pixel3axl/dd_build_kernel-4.9.124.htm">
-  build kernel 4.9.124</a><br>  
-  
+  build kernel 4.9.124</a><br>    
+<br><br><br><br>
+
+<div id="pinephone"></div>
+<h3><img src="img/photos/pinephone.jpg" class="floatLeft"/>
+PINE64 PinePhone</h3>
+<hr size="1"><br><br><br><br><br>
+&lowast;
+<a href="phone/pinephone/review.htm">
+介紹</a><br>
 <br><br><br><br>
 
 </p>
