PSP Go How to prepare building environment under docker.

--- a/emu/pspgo/cpp_setup.htm
+++ b/emu/pspgo/cpp_setup.htm
@@ -49,6 +49,9 @@
 <p><b>開發環境</b></p>
 <hr size="1">
 <p>
+參考資訊：<br>
+1. <a href="https://hub.docker.com/r/ticky/pspdev/">pspdev</a><br><br>
+
 司徒目前使用手動編譯好的PSPDEV作為開發工具，安裝步驟如下：
 </p>
 <pre>
@@ -73,6 +76,18 @@ $ git submodule update --init --recursive
 $ ./b.sh
 $ sudo ln -s /tmp/build/PPSSPPSDL /usr/local/bin/psp
 $ sudo chmod 0777 /usr/local/bin/psp
+</pre><br>
+
+<p>
+如果想要使用Docker環境編譯，可以使用如下方式：
+</p>
+<pre>
+$ sudo docker run -it --rm -v "$PWD:/src" ticky/pspdev /bin/bash
+root@fea850f73e8b:/src# psp-gcc --version
+    psp-gcc (GCC) 4.9.3
+    Copyright (C) 2015 Free Software Foundation, Inc.
+    This is free software; see the source for copying conditions.  There is NO
+    warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 </pre><br>
 
 <p>
