GNU How to use gcc flags '-fsanitize=address'.

--- a/program.htm
+++ b/program.htm
@@ -322,6 +322,10 @@ invoke</a><br>
 struct</a><br>
 
 &lowast;
+<a href="program/gnu/sant.htm">
+-fsanitize=address</a><br>
+
+&lowast;
 <a href="program/gnu/makefile_phony.htm">
 Makefile .PHONY</a><br>
 
