--- a/program.htm
+++ b/program.htm
@@ -322,6 +322,10 @@ invoke</a><br>
 struct</a><br>
 
 &lowast;
+<a href="program/gnu/restore_pid.htm">
+restore pid</a><br>
+
+&lowast;
 <a href="program/gnu/sant.htm">
 -fsanitize=address</a><br>
 
