Trip Updated Italy page.

--- a/trip/italy/firenze.htm
+++ b/trip/italy/firenze.htm
@@ -72,6 +72,24 @@
 <img src="firenze/30.jpg" class="maxSize"><br>
 <img src="firenze/22.jpg" class="maxSize"><br><br>
 
+領主廣場(Piazza della Signoria)<br>
+<img src="firenze/37.jpg" class="maxSize"><br>
+<img src="firenze/38.jpg" class="maxSize"><br><br>
+
+海神噴泉(Fontana del Nettuno)<br>
+<img src="firenze/48.jpg" class="maxSize"><br><br>
+
+傭兵涼廊(Loggia dei Lanzi)，可以將肌肉線條透過雕刻作品呈現出來，確實厲害～<br>
+<img src="firenze/39.jpg" class="maxSize"><br>
+<img src="firenze/40.jpg" class="maxSize"><br>
+<img src="firenze/41.jpg" class="maxSize"><br>
+<img src="firenze/42.jpg" class="maxSize"><br>
+<img src="firenze/43.jpg" class="maxSize"><br>
+<img src="firenze/44.jpg" class="maxSize"><br>
+<img src="firenze/45.jpg" class="maxSize"><br>
+<img src="firenze/46.jpg" class="maxSize"><br>
+<img src="firenze/47.jpg" class="maxSize"><br><br>
+
 聖母百花聖殿(Cattedrale di Santa Maria del Fiore)，相當漂亮的教堂<br>
 <img src="firenze/2.jpg" class="maxSize"><br>
 <img src="firenze/34.jpg" class="maxSize"><br>
