Trip Updated Italy page.

--- a/trip/italy/firenze.htm
+++ b/trip/italy/firenze.htm
@@ -72,6 +72,29 @@
 <img src="firenze/30.jpg" class="maxSize"><br>
 <img src="firenze/22.jpg" class="maxSize"><br><br>
 
+學院美術館(Galleria dell'Accademia)<br>
+<img src="firenze/50.jpg" class="maxSize"><br>
+<img src="firenze/51.jpg" class="maxSize"><br><br>
+
+米開朗基羅的大衛像～<br>
+<img src="firenze/52.jpg" class="maxSize"><br>
+<img src="firenze/53.jpg" class="maxSize"><br>
+<img src="firenze/54.jpg" class="maxSize"><br>
+<img src="firenze/55.jpg" class="maxSize"><br>
+<img src="firenze/56.jpg" class="maxSize"><br>
+<img src="firenze/57.jpg" class="maxSize"><br>
+<img src="firenze/58.jpg" class="maxSize"><br>
+<img src="firenze/59.jpg" class="maxSize"><br><br>
+
+佛羅倫斯市徽<br>
+<img src="firenze/60.jpg" class="maxSize"><br><br>
+
+聽肥豬媽說是一個名人的故居<br>
+<img src="firenze/61.jpg" class="maxSize"><br>
+<img src="firenze/62.jpg" class="maxSize"><br>
+<img src="firenze/63.jpg" class="maxSize"><br>
+<img src="firenze/64.jpg" class="maxSize"><br><br>
+
 領主廣場(Piazza della Signoria)<br>
 <img src="firenze/37.jpg" class="maxSize"><br>
 <img src="firenze/38.jpg" class="maxSize"><br><br>
@@ -90,6 +113,17 @@
 <img src="firenze/46.jpg" class="maxSize"><br>
 <img src="firenze/47.jpg" class="maxSize"><br><br>
 
+Gucci Garden博物館，需要購買門票才可以參觀，不過，往外看的視角確實不錯～<br>
+<img src="firenze/65.jpg" class="maxSize"><br>
+<img src="firenze/66.jpg" class="maxSize"><br><br>
+
+還蠻逼真的，剛開始確實有被嚇到，因為廁所間裡面還有蠟像坐在裡面～<br>
+<img src="firenze/67.jpg" class="maxSize"><br><br>
+
+相當寬敞的廣場，左前方就是Apple Store～<br>
+<img src="firenze/68.jpg" class="maxSize"><br>
+<img src="firenze/69.jpg" class="maxSize"><br><br>
+
 聖母百花聖殿(Cattedrale di Santa Maria del Fiore)，相當漂亮的教堂<br>
 <img src="firenze/2.jpg" class="maxSize"><br>
 <img src="firenze/34.jpg" class="maxSize"><br>
@@ -104,6 +138,9 @@
 
 新聖母大殿(Basilica di Santa Maria Novella)<br>
 <img src="firenze/7.jpg" class="maxSize"><br><br>
+
+野豬噴泉(Fontana del Porcellino)，肥豬媽說摸鼻子可以帶來好運～<br>
+<img src="firenze/49.jpg" class="maxSize"><br><br>
 
 SMN百年修道院，裡面有賣東西，肥豬媽買了一些香皂，說要放在衣櫥...<br>
 <img src="firenze/8.jpg" class="maxSize"><br>
