Wine How to use common dialog(FindText).

--- a/program.htm
+++ b/program.htm
@@ -540,6 +540,10 @@ Wine</h3>
           <a href="program/wine/cpp_dlg_choosecolor.htm">
           ChooseColor</a><br>
         
+          &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+          <a href="program/wine/cpp_dlg_findtext.htm">
+          FindText</a><br>
+        
       &emsp;&emsp;&oplus;
       Single Document Interface (SDI)<br>
 
