PinePhone Added pogo pins image.

--- a/phone.htm
+++ b/phone.htm
@@ -2280,6 +2280,10 @@ PINE64 PinePhone</h3>
 &lowast;
 <a href="phone/pinephone/review.htm">
 介紹</a><br>
+
+&lowast;
+<a href="phone/pinephone/pogo.htm">
+Pogo pins</a><br>
 <br><br><br><br>
 
 </p>
