--- a/program.htm
+++ b/program.htm
@@ -544,6 +544,10 @@ Wine</h3>
           <a href="program/wine/cpp_dlg_findtext.htm">
           FindText</a><br>
         
+          &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lowast;
+          <a href="program/wine/cpp_dlg_replacetext.htm">
+          ReplaceText</a><br>
+        
       &emsp;&emsp;&oplus;
       Single Document Interface (SDI)<br>
 
