PinePhone Added uart pin image.

--- a/phone.htm
+++ b/phone.htm
@@ -2284,6 +2284,10 @@ PINE64 PinePhone</h3>
 &lowast;
 <a href="phone/pinephone/pogo.htm">
 Pogo pins</a><br>
+
+&lowast;
+<a href="phone/pinephone/uart.htm">
+UART pins</a><br>
 <br><br><br><br>
 
 </p>
