--- a/phone/pinephone/uart.htm
+++ b/phone/pinephone/uart.htm
@@ -52,9 +52,72 @@
 參考資料：<br>
 1. <a href="https://wiki.pine64.org/index.php/PinePhone">wiki</a><br><br>
 
-如下：<br>
-<img src="uart/1.jpg" class="maxSize">
+UART腳位是連接到耳機孔<br>
+<img src="uart/1.jpg" class="maxSize"><br><br>
+
+Baudrate 115200bps(預設的出廠系統)<br>
+<img src="uart/2.jpg" class="maxSize">
 </p>
+<pre>
+U-Boot SPL 2022.04-1 (Apr 06 2022 - 03:51:54 +0000)
+DRAM: 3072 MiB
+Trying to boot from MMC2
+NOTICE:  BL31: v2.6(release):
+NOTICE:  BL31: Built : 03:51:54, Apr  6 2022
+NOTICE:  BL31: Detected Allwinner A64/H64/R18 SoC (1689)
+NOTICE:  BL31: Found U-Boot DTB at 0x20884d8, model: Pine64 PinePhone (1.2)
+
+
+U-Boot 2022.04-1 (Apr 06 2022 - 03:51:54 +0000) Manjaro Linux ARM
+
+CPU:   Allwinner A64 (SUN50I)
+Model: Pine64 PinePhone (1.2)
+DRAM:  3 GiB
+DRAM Clock: 528 MHz
+Core:  36 devices, 13 uclasses, devicetree: separate
+WDT:   Not starting watchdog@1c20ca0
+MMC:   mmc@1c0f000: 0, mmc@1c10000: 2, mmc@1c11000: 1
+Loading Environment from FAT... Unable to read "uboot.env" from mmc1:1...
+In:    serial
+Out:   serial
+Err:   serial
+Net:   No ethernet found.
+Set ram_freq : 528
+Hit any key to stop autoboot:  0
+switch to partitions #0, OK
+mmc1(part 0) is current device
+Scanning mmc 1:1...
+Found U-Boot script /boot.scr
+1476 bytes read in 1 ms (1.4 MiB/s)
+## Executing script at 4fc00000
+gpio: pin 98 (gpio 98) value is 1
+gpio: pin 114 (gpio 114) value is 1
+20160520 bytes read in 429 ms (44.8 MiB/s)
+gpio: pin 98 (gpio 98) value is 0
+53718 bytes read in 4 ms (12.8 MiB/s)
+7656123 bytes read in 164 ms (44.5 MiB/s)
+gpio: pin 115 (gpio 115) value is 1
+Moving Image from 0x40080000 to 0x40200000, end=415b0000
+## Flattened Device Tree blob at 4fa00000
+   Booting using the fdt blob at 0x4fa00000
+   Loading Ramdisk to 498b2000, end 49fff2bb ... OK
+   Loading Device Tree to 00000000498a1000, end 00000000498b11d5 ... OK
+
+Starting kernel ...
+
+[    0.587701] lima 1c40000.gpu: dev_pm_opp_set_regulators: no regulator (mali) found: -19
+Starting version 251-1-arch
+ROOT_MNJRO: recovering journal
+ROOT_MNJRO: clean, 165773/1856832 files, 1327485/7452599 blocks
+[    6.796646] pinephone-keyboard 2-0015: error -ENXIO: Failed to read device ID
+[    6.869931] iio iio:device3: failed to read Who-Am-I register.
+[    7.834354] debugfs: File 'Bluetooth Playback' in directory 'dapm' already present!
+[    7.843254] debugfs: File 'Bluetooth Capture' in directory 'dapm' already present!
+
+Manjaro Linux 5.18.0-1-MANJARO-ARM (ttyS0)
+
+manjaro-arm login: [   22.380294] gc2145 3-003c: gc2145_write_regs: error -6: addr=fe, data=00
+</pre><br>
 
 <p>
 <br><a href="../../phone.htm">返回上一頁</a>
