PinePhone Updated uart page.

--- a/phone/pinephone/uart.htm
+++ b/phone/pinephone/uart.htm
@@ -55,8 +55,13 @@
 UART腳位是連接到耳機孔<br>
 <img src="uart/1.jpg" class="maxSize"><br><br>
 
-Baudrate 115200bps(預設的出廠系統)<br>
-<img src="uart/2.jpg" class="maxSize">
+司徒目前只有將<b>Wifi/BT ON</b>，其餘都關閉<br>
+<img src="uart/3.jpg" class="maxSize"><br><br>
+
+連接UART線<br>
+<img src="uart/2.jpg" class="maxSize"><br><br>
+
+Baudrate 115200bps(預設的出廠系統)
 </p>
 <pre>
 U-Boot SPL 2022.04-1 (Apr 06 2022 - 03:51:54 +0000)
