PinePhone How to enter flashing mode.

--- a/phone.htm
+++ b/phone.htm
@@ -2288,6 +2288,10 @@ Pogo pins</a><br>
 &lowast;
 <a href="phone/pinephone/uart.htm">
 UART pins</a><br>
+
+&lowast;
+<a href="phone/pinephone/flashmode.htm">
+如何進入flashing mode</a><br>
 <br><br><br><br>
 
 </p>
