Italy Updated rome page.

--- a/trip/italy/rome.htm
+++ b/trip/italy/rome.htm
@@ -78,10 +78,14 @@
 
 沿路經過的景點<br>
 <img src="rome/41.jpg" class="maxSize"><br>
-<img src="rome/42.jpg" class="maxSize"><br><br>
+<img src="rome/42.jpg" class="maxSize"><br>
+<img src="rome/46.jpg" class="maxSize"><br><br>
 
 真理之口<br>
 <img src="rome/43.jpg" class="maxSize"><br><br>
+
+一個在河上的小島<br>
+<img src="rome/47.jpg" class="maxSize"><br><br>
 
 夜晚的萬神殿<br>
 <img src="rome/44.jpg" class="maxSize"><br><br>
